Debugged generate_genomes.py sample_genome.py

--- a/README
+++ b/README
@@ -20,8 +20,8 @@ Extract into directory 'hg19'
 
 ## Example commands ##
 
-# Output random 100Mb region from hg19
-sample_genome.py --genome-dir hg19 --output ref.fa --sample-length 100000000
+# Output random 10Mb region from hg19
+sample_genome.py --genome-dir hg19 --output ref.fa --sample-length 1e7
 
-# Simulate 10000 reads from the 100Mb region above.  Reads come from an individual's normal and cancer diploid genomes at proportions of 0.25 and 0.75, respectively.  Germline mutation rate is 1e-4 and somatic mut rate is 1e-6.  
-generate_genomes.py --ref ref.fa --k n1 c1 --pl 2 --germ-mu 1e-4 --som-mu 1e-6 --alpha 0.25 0.75 --reads 10000 --output reads.fq
+# Simulate 1e4 reads from the 10Mb region above.  Reads come from an individual's normal and cancer diploid genomes at proportions of 0.25 and 0.75, respectively.  Germline mutation rate is 1e-3 and somatic mut rate is 1e-5.  
+generate_genomes.py --ref ref.fa --k n1 c1 --pl 2 --germ-mu 1e-3 --som-mu 1e-5 --alpha 0.25 0.75 --reads 1e4 --output reads.fq
