--- a/README
+++ b/README
@@ -31,6 +31,5 @@ generate_genomes.py --ref ref.fa --k n1 c1 --pl 2 --germ-mu 1e-3 --som-mu 1e-3 -
 # Simulate 1e4 reads from the 10Mb region ref.fa.  Reads come from an
 # individual's normal and cancer diploid genomes at proportions of
 # 0.25 and 0.75, respectively.  Germline mutation rate is 1e-3 and
-# somatic mut rate is 1e-5.
-simulate_reads.py --genomes n1.fa c1.fa --alpha 0.25 0.75 --reads 1e4 --reads1 reads.1.fq --reads2 reads.2.fq
-
+# somatic mut rate is 1e-5.  Parallelize with two processes.
+simulate_reads.py --genomes n1.fa c1.fa --alpha 0.25 0.75 --reads 1e4 --reads1 reads.1.fq --reads2 reads.2.fq -p 2
